# SpikeData

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  spikedata.py  spikedata_test.py  test.py  test_spikedata.py
.github/workflows/: cd.yml  ci.yml
spikedata/: __init__.py  spikedata.py
