[project]
name = "spikedata"
version = "0.1.0"
description = "Data structure and analysis for neural spike data"
authors = [
  { name = "UCSC Braingeneers", email = "ucscgi@ucsc.edu" },
]
maintainers = [
  { name = "Alex", email = "atspaeth@ucsc.edu" },
  { name = "Lon", email = "lblauvel@ucsc.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
all = [
    "powerlaw>=1.5",
]

[dependency-groups]
dev = [
    "neo>=0.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "scipy-stubs>=1.15.2.2",
    "spikedata[all]",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.uv.sources]
spikedata = { workspace = true }
